--- a/.d/.opus/readme.opus/cntx.ins.d/002.info.d/001.txt.md
+++ b/.d/.opus/readme.opus/cntx.ins.d/002.info.d/001.txt.md
@@ -1,5 +1,10 @@
 # INFO
 
 - cli after install
-
-    $ _stl -h
+    - help stl lib
+    
+        $ s_ -h 
+    - start stl [ source ]
+    
+        $ s_ ~/.stl.d/.stlrc
+        
