--- a/.d/.stl.d.copy~/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
+++ b/.d/.stl.d.copy~/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
@@ -3,12 +3,12 @@
 0 - false
 1 - true
 
-### Глобальные `~/`
+### Глобальные in dr: `~/`
 
-    ~/.stl.use.flag - use or not stl  external setting behavior
+    ~/.stl.use.flag - use or not stl  external setting behavior :: ~/.stl.d/flow.d/boot.d/boot.sh
 
-### Локальные `~/.stl.d/data.d/flag.d`
+### Локальные in dr: `~/.stl.d/data.d/flag.d`
 
-    ~/.stl.d/data.d/flag.d/stlrc.log.flag - start or not 
+    ~/.stl.d/data.d/flag.d/stlrc.log.flag - start or not ~/.stl.d/flow.d/boot.d/boot.sh
 
     ~/.stl.d/data.d/flag.d/git_reset.flag - reset or not all git diff :: use in git_flow_functions
