--- a/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
+++ b/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
@@ -1,14 +1,26 @@
 ## Флаги
 
-0 - false
-1 - true
+Acceptable values:
 
-### Глобальные in dr: `~/`
+    0 - false
+    1 - true
 
-    ~/.stl.use.flag - use or not stl  external setting behavior :: ~/.stl.d/flow.d/boot.d/boot.sh
+### Global in dr: `~/`
 
-### Локальные in dr: `~/.stl.d/data.d/flag.d`
+- ~/.stl.use.flag - 
 
-    ~/.stl.d/data.d/flag.d/stlrc.log.flag - start or not ~/.stl.d/flow.d/boot.d/boot.sh
+    (1|0) :: (abort|not abort) process : `source ~/.stl.d/flow.d/boot.d/boot.sh` at the begining 
 
-    ~/.stl.d/data.d/flag.d/git_reset.flag - reset or not all git diff :: use in git_flow_functions
+### Local in dr: `~/.stl.d/data.d/flag.d`
+
+
+- `~/.stl.d/data.d/flag.d/stlrc.log.flag` :
+
+
+    (1|0) :: `source ~/.stl.d/flow.d/boot.d/boot.sh`  (`> ~/.stl.d/data.d/log.d/stlrc.log` | `> stdout, stderr`)
+     
+
+- `~/.stl.d/data.d/flag.d/git_reset.flag` : 
+ 
+
+    (1|0) :: (reset | not reset) all git diff :: use in git_flow_functions :: protection mode against changes
