--- a/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
+++ b/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.boot.d/004.flags.d/001.txt.md
@@ -7,7 +7,7 @@ Acceptable values:
 
 ### Global in dr: `~/`
 
-- ~/.stl.use.flag - 
+- `~/.stl.use.flag` :
 
     (1|0) :: (abort|not abort) process : `source ~/.stl.d/flow.d/boot.d/boot.sh` at the begining 
 
