--- a/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.general.d/003.flags.d/001.txt.md
+++ b/.d/.stl.d.copy/data.d/opus.d/boot.opus/cntx.ins.d/002.general.d/003.flags.d/001.txt.md
@@ -2,7 +2,7 @@
 
 Acceptable values:
 
-    0 - false
+    0 - false 
     1 - true
 
 #### Global in dr: `~/`
@@ -17,10 +17,10 @@ Acceptable values:
 - `~/.stl.d/data.d/flag.d/stlrc.log.flag` :
 
 
-    (1|0) :: `source ~/.stl.d/flow.d/boot.d/boot.sh`  (`> ~/.stl.d/data.d/log.d/stlrc.log` | `> stdout, stderr`)
+    (1|0) :: default 0 :: `source ~/.stl.d/flow.d/boot.d/boot.sh` (`&> ~/.stl.d/data.d/log.d/stlrc.log` | `1>/dev/null`)
      
 
 - `~/.stl.d/data.d/flag.d/git_reset.flag` : 
  
 
-    (1|0) :: (reset | not reset) all git diff :: use in git_flow_functions :: protection mode against changes
+    (1|0) :: default 1 ::(reset | not reset) all git diff :: use in git_flow_functions :: protection mode against changes
