--- a/.d/.opus/readme.opus/cntx.ins.d/002.info.d/001.txt.md
+++ b/.d/.opus/readme.opus/cntx.ins.d/002.info.d/001.txt.md
@@ -3,8 +3,11 @@
 - cli after install
     - help stl lib
     
-        $ s_ -h 
+        `$ s_ -h` 
     - start stl [ source ]
     
-        $ s_ ~/.stl.d/.stlrc
-        
+        `$ s_ ~/.stl.d/.stlrc`
+
+- net     
+    - https://gitflic.ru/project/legioner9/stl
+    - https://github.com/legioner9/stl    
