--- a/.s/Pala/dotd_to_stl/depends_in_dotd_fn.man
+++ b/.s/Pala/dotd_to_stl/depends_in_dotd_fn.man
@@ -15,7 +15,7 @@ _d2f
 _d2mm
 _d4d
 _d5d
-_date
+_date +
 _dd2ae
 _dd2Ae
 _dd2e
@@ -107,7 +107,7 @@ _sd2d
 _sdd2d
 _sf2f
 _sn2e
-_source_w1_isf
+_source_w1_isf +
 _sRf
 _st_err
 _stE
