--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -26,3 +26,27 @@
     _flow_1     free use_case num_1
   
     [_rbld]     build fn.sh from fn.prc
+
+## (1.5) stdin for tst
+```sh
+    echo "!STRING_AS_WORD!" &>>"${res}"
+    cat >FILE <<EOF
+third_str
+fourth_str
+EOF
+
+    echo "FILE_ARG:" &>>"${res}"
+    fn_str FILE &>>"${res}"
+
+    echo "FILE_PIPE:" &>>"${res}"
+    cat FILE | fn_str &>>"${res}"
+
+    echo "HERE_DOC:" &>>"${res}"
+    fn_str <<EOF &>>"${res}"
+first_str
+second_str
+EOF
+
+    echo "HERE_STR:" &>>"${res}"
+    fn_str <<<"here_str_::_fifth_str" &>>"${res}"
+```
