--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -3,13 +3,13 @@
 
 - [@] - arg mean expect stdin_key or stdin_pipe
 
-## (1.2) Use [NUM] in x8x functions
+## LEX(1.2) Use [NUM] in x8x functions
 
 - [NUM] - arg 
     - 0 - use stdin_key for choice in menu
     - [num] - define choice piont of menu
 
-## (1.3) Use [ptr_variables] - for $var - 'var' is ptr
+## LEX(1.3) Use [ptr_variables] - for $var - 'var' is ptr
 
 - [ptr_variables] define in env fn
 - Use :
@@ -17,7 +17,7 @@
     local var=
     fn var
 ```
-## (1.4) CNTL arguments stl_fn
+## LEX(1.4) CNTL arguments stl_fn
 
     -h          help   
     _go         edit (fn.sh | fn.prc for prc_functions)    
@@ -27,7 +27,7 @@
   
     [_rbld]     build fn.sh from fn.prc
 
-## (1.5) stdin for tst
+## LEX(1.5) stdin for tst
 ```sh
     echo "!STRING_AS_WORD!" &>>"${res}"
     cat >FILE <<EOF
