--- a/.d/.stl.d/opus.d/lex.d/004.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/004.lex.md
@@ -1,11 +1,11 @@
 # Keywords
 
-    udr - [dir LEX(3.1) & LEX(3.3)]
-    ufl - [file LEX(3.1) & LEX(3.3)] 
-    ustr - [string LEX(3.2)]
-
-    dr - [dir LEX(3.3)]
-    fl - [file LEX(3.3)] 
-
-    Adr - [dir]
-    Afl - [file] 
+    LEX(4.1)    udr - [dir LEX(3.1) & LEX(3.3)]
+    LEX(4.2)    ufl - [file LEX(3.1) & LEX(3.3)] 
+    LEX(4.3)    ustr - [string LEX(3.2)]
+    
+    LEX(4.4)    dr - [dir LEX(3.3)]
+    LEX(4.4)    fl - [file LEX(3.3)] 
+    
+    LEX(4.5)    Adr - [dir]
+    LEX(4.6)    Afl - [file] 
