--- a/.d/.stl.d/opus.d/lex.d/005.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/005.lex.md
@@ -1,6 +1,6 @@
 # Phrases
 
-## (5.1) [ENT LEX(N.N)]
+## LEX(5.1) [ENT LEX(N.N)]
 
 - ${STL_D_PATH}/opus.d/regula.d - RULE for ENT in STL
     - Use :
