--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -50,3 +50,8 @@ EOF
     echo "HERE_STR:" &>>"${res}"
     fn_str <<<"here_str_::_fifth_str" &>>"${res}"
 ```
+
+## LEX(1.6) args from stdin
+```sh
+read -r 
+```
