--- a/.d/.stl.d/opus.d/lex.d/006.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/006.lex.md
@@ -2,5 +2,9 @@
 
 ## LEX(6.1) '### str' is titulus [ttu] [of]
 
+## LEX(6.2) '$pth1@$pth2' 
+### use for flow: 
+- bcp $pth1->$pth1, dpl $pth1->$pth2
+
 
 
