--- a/.d/.stl.d/opus.d/lex.d/005.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/005.lex.md
@@ -5,5 +5,5 @@
 - ${STL_D_PATH}/opus.d/regula.d - RULE for ENT in STL
     - Use :
     
-    [dir LEX(1.1)] name dir that follows rule discribe in ${STL_D_PATH}/opus.d/regula.d/001.regula [point (1/1)]
+    [dir LEX(1.1)] name dir that follows rule discribe in ${STL_D_PATH}/opus.d/regula.d/001.lex.md [point (1/1)]
 
