--- a/.d/.stl.d/opus.d/lex.d/006.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/006.lex.md
@@ -1,6 +1,6 @@
 # Contents
 
-## LEX(6.1) '### str' is titulus [ttu] [of]
+## LEX(6.1) first string contane '#@' is titulus of file [ttu] [of]
 
 ## LEX(6.2) '$pth1@$pth2' 
 ### use for flow: 
