--- a/.d/.stl.d/opus.d/lex.d/004.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/004.lex.md
@@ -11,3 +11,8 @@
     LEX(4.6)    Afl - [file] 
 
     LEX(4.7)    ttu - [titulus of file [of] LEX(6.1)]
+    LEX(4.8)    8name - 8point name of menu 
+    LEX(4.9)    8res - 8point res of menu 
+    LEX(4.10)   8point - pair (8name,8res) in menu
+    LEX(4.11)   strin - (string | here_str)
+    LEX(4.12)   flin - (file | here_doc | file_pipe | here_str)
