--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -57,3 +57,16 @@ read -r
 ```
 
 ## LEX(1.7) CNTL_BCPL (_bcp|_dpl)
+## LEX(1.8) 8num - 0 or num or @
+```sh
+if [[ "@" == "$2" ]]; then
+    echo "Enter num menu :"
+    read -r
+    arg_2=$REPLY
+    l_00_echo_info "'\$arg_2 = $arg_2'"
+else
+    arg_2="$2"
+fi
+```
+## LEX(1.9) strin - (string_arg | here_str)
+## LEX(1.10) flin - (file_arg | here_doc | file_pipe | here_str)
