--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -70,3 +70,4 @@ fi
 ```
 ## LEX(1.9) strin - (string_arg | here_str)
 ## LEX(1.10) flin - (file_arg | here_doc | file_pipe | here_str)
+## LEX(1.11) stdout res fl
