--- a/.d/.stl.d/opus.d/lex.d/006.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/006.lex.md
@@ -6,5 +6,7 @@
 ### use for flow: 
 - bcp $pth1->$pth1, dpl $pth1->$pth2
 
-
+## LEX(6.2) (file,dir)
+### temlate file contane {{NAME}} reciver string
+### insert dir contane NAME.ins files for {{NAME}} reciver string in temlate file
 
