<> l_04_d8td4f _flow_1 do stack ##

--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -71,3 +71,5 @@ fi
 ## LEX(1.9) strin - (string_arg | here_str)
 ## LEX(1.10) flin - (file_arg | here_doc | file_pipe | here_str)
 ## LEX(1.11) stdout res fl
+## LEX(1.12) Use [@] 
+- if expect dir - use $PWD dir
