--- a/.d/.stl.d/opus.d/lex.d/007.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/007.lex.md
@@ -3,10 +3,10 @@
 ## LEX(7.1) grass parameter
 ```sh
 #* grass parameter
-l_00_echo_info "--- grass parameter ---"
-l_00_echo_info "\$1 :: 'ins_fl = file://$ptr_path_1 '"
-l_00_echo_info "\$2 :: 'rcv_str = $2'"
-l_00_echo_info "\$3 :: 'rcv_fl = file://$ptr_path_3 '"
+
+l_00_echo_gras "\$1 :: 'ins_fl = file://$ptr_path_1 '"
+l_00_echo_gras "\$2 :: 'rcv_str = $2'"
+l_00_echo_gras "\$3 :: 'rcv_fl = file://$ptr_path_3 '"
 
 ```
 
