--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -73,3 +73,7 @@ fi
 ## LEX(1.11) stdout res fl
 ## LEX(1.12) Use [@] 
 - if expect dir - use $PWD dir
+
+## LEX(1.13) Use [NUM] in x7x functions
+
+- [NUM] - arg natur num from 0
