--- a/.d/.stl.d/opus.d/lex.d/002.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/002.lex.md
@@ -2,3 +2,8 @@
 ## LEX(2.1) Use x8x
 
 8 - use 'select' loop 
+
+## LEX(2.3) Use x7x
+
+7 - use instead pointed num from itterate
+    - [d7...] [num] - point to [num] element from itterate in dir m.b. num of [ls [dir]]
