--- a/.d/.stl.d/opus.d/lex.d/004.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/004.lex.md
@@ -16,3 +16,5 @@
     LEX(4.10)   8point - pair (8name,8res) in menu
     LEX(4.11)   strin - (string | here_str)
     LEX(4.12)   flin - (file | here_doc | file_pipe | here_str)
+    LEX(4.13)   lnum - lst num (1...)
+    LEX(4.14)   anum - arr num (0...)
