--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -77,3 +77,6 @@ fi
 ## LEX(1.13) Use [NUM] in x7x functions
 
 - [NUM] - arg natur num from 0
+
+## LEX(1.14) null_agrg_mode
+- f.e. exec info message or hint 
