--- a/.d/.stl.d/opus.d/lex.d/001.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/001.lex.md
@@ -80,3 +80,7 @@ fi
 
 ## LEX(1.14) null_agrg_mode
 - f.e. exec info message or hint 
+
+## LEX(1.15) [AND \${ARGS[@]:N}] group arg for inner procedure
+- \${ARGS[@]:0:N-1} requiered args for function - define inner procedure
+- \${ARGS[@]:N} requiered args for inner procedure 
