--- a/.d/.stl.d/opus.d/lex.d/006.lex.md
+++ b/.d/.stl.d/opus.d/lex.d/006.lex.md
@@ -13,10 +13,31 @@
 ## LEX(6.3) dir contane ofl .od LEX(6.1) as discribe of dir 
 
 ## LEX(6.4) tml_dir
-```sh
-tree tml_dir
-├── ins.d
-│   └── body.ins
-├── .od
-└── rcv.f
-```
+
+    tree tml_dir
+    ├── ins.d
+    │   └── body.ins
+    ├── .od
+    └── rcv.f
+
+
+## LEX(6.5) ifs_od_dr
+
+    tree -a ifs_od_dr
+    ├── .d
+    │   └── _doc
+    │       ├── rdm.man
+    │       └── tgs.lst
+    └── .od
+
+    cat ifs_od_dr.d/.od
+    #@
+
+    cat ifs_od_dr.d/.d/_doc/rdm.man
+    ## that readme
+
+    cat ifs_od_dr.d/.d/_doc/tgs.lst
+    tag_1
+    tag_2
+    ...
+
