--- a/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/001.d/u.1
+++ b/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/001.d/u.1
@@ -1,117 +1,5 @@
-[0;30m[2m[106m[7m'ls -A ' in 'pwd=/home/st'[0m
-apache-netbeans-23-0.noarch.rpm
-ava_4.jpg
-.bash_history
-.bash_logout
-.bash_profile
-.bash_profile.bcp.tar.gz
-.bashrc
-.bashrc.bcp.tar.gz
-.bashrc.lib.conf
-.bashrc.log
-.cache
-.clang-format
-.clang-format.bcp.tar.gz
-.config
-..d
+[0;30m[2m[106m[7m'ls -A tst_dir_in/ls.d' in 'pwd=/home/st/REPOBARE/_repo/stl/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/002.d/.d/_tst'[0m
+1.d
+2.f
 .d
-.d~
-..d.bcp.tar.gz
-.d.bcp.tar.gz
-.digrc
-.digrc.bcp.tar.gz
-.dmrc
-.emacs.d
-.enterrc
-.enterrc.bcp.tar.gz
-.foe
-.foe.bcp.tar.gz
-.fonsh_path
-.fonsh_path.bcp.tar.gz
-.fonts
-.fonts.bcp.tar.gz
-.gitconfig
-.gitconfig.bcp.tar.gz
-.gnome
-.gnupg
-.gtkrc-2.0
-.is_bashrc_log
-.java
-.links
-.links.bcp.tar.gz
-lll.txt
-llpr.man
-.local
-.lpoptions
-.mailrc
-.mailrc.bcp.tar.gz
-.mutt
-.netbeans
-.pd_path
-.pd_path.bcp.tar.gz
-.pd_read
-.pd_read.bcp.tar.gz
-.phpls
-.pki
-.plt_path
-.plt_path.bcp.tar.gz
-.plt.use.flag
-read.zip
-REPOBARE
-.repo_path
-.repo_path.bcp.tar.gz
-.rnd
-.rpmmacros
-.sd.bcp.tar.gz
-.skel.d
-.skel.d.bcp.tar.gz
-.ssh
-st1.crt
-st1.ovpn
-st1.srt
-.stl
-.stl.bcp.tar.gz
-.stl.d~
-.stl.d.bcp.tar.gz
-.stl_d_path
-.stldrc.log
-.stl.use.flag
-.strc.log
-.strc.use.flag
-.tmp
-tmp
-.tmp_dir_st_rc
-tmp_dir_st_rc
-.tmux.conf
-.tmux.conf.bcp.tar.gz
-.vim
-.vim.bcp.tar.gz
-.viminfo
-.vimrc
-.vimrc.bcp.tar.gz
-.vscode
-.vscode_home.zip
-.vscode-oss
-.vscode-oss~
-.vscode-oss_home.zip
-.w
-.wget-hsts
-.wgetrc
-.wgetrc.bcp.tar.gz
-.Xauthority
-.xprofile
-.xsession.d
-.xsession-errors
-.xsession-errors:0
-.xsession-errors.old
-x.zip
-YA
-.yandex
-YA_ya.zip
-Видео
-Документы
-Загрузки
-Изображения
-Музыка
-Рабочий стол
-Шаблоны
+.f
