--- a/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/002.d/u.1
+++ b/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/002.d/u.1
@@ -4,3 +4,8 @@ ${ARG_l_06_xds71[2]} = tst_dir_in/ls.d
 ${ARG_l_04_od7xfv[0]} = /home/st/REPOBARE/_repo/stl/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d
 ${ARG_l_04_od7xfv[1]} = 1
 ${ARG_l_04_od7xfv[2]} = tst_dir_in/ls.d
+[0;30m[2m[106m[7m'ls -A tst_dir_in/ls.d' in 'pwd=/home/st/REPOBARE/_repo/stl/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/001.od.d/002.d/.d/_tst'[0m
+1.d
+2.f
+.d
+.f
