--- a/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/002.od.d/001.d/u.1
+++ b/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/002.od.d/001.d/u.1
@@ -1,4 +1,13 @@
-${ARG_l_06_xds71[0]} = 1
-${ARG_l_06_xds71[1]} = 0
-${ARG_l_04_od7xfv[0]} = /home/st/REPOBARE/_repo/stl/.d/.stl.d/prc.d/boot_stl_fn.d/__dta/l_06_xds71/od.dd/002.od.d
-${ARG_l_04_od7xfv[1]} = 0
+[0;30m[2m[106m[7mls -A /home/st/tmp :: [0m
+0
+00_
+_0.sh
+etc
+etc_bash.d
+etc.zip
+exa_etc.d
+for_fip
+functions
+Repono_arh_bare
+sw
+tmp_foe_tst
